[project]
name = "odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "chardet>=5.2.0",
    "decorator>=5.2.1",
    "docutils>=0.22",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "libsass==0.20.0",
    "lxml[html-clean]>=6.0.0",
    "markupsafe>=3.0.2",
    "num2words>=0.5.14",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "polib>=1.2.0",
    "psutil>=7.0.0",
    "psycopg2>=2.9.10",
    "pyopenssl>=25.1.0",
    "pypdf>=5.9.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "rjsmin>=1.2.4",
    "werkzeug>=3.1.3",
    "zeep>=4.3.1",
]
